<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="right"
        android:background="#1a80c4"
        android:src="@drawable/ic_menu_flood_square" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#1a80c4"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/flood_fragment"
        android:textAllCaps="true"
        android:textColor="#FFF"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="safetyfirst.phyoekhantzin.net.activities.FireActivity">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/flood_text1" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager_flood"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="#FFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/flood_title1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#1a80c4"
                    android:clickable="true"
                    android:gravity="left|center"
                    android:onClick="toggle_contents1"
                    android:paddingLeft="10dp"
                    android:text="@string/flood_tiptitle1"
                    android:textColor="#FFF" />
                <!--content to hide/show -->
                <LinearLayout
                    android:id="@+id/flood_content1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#e2f3ff"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_1_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_1_2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_1_3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flood_tiptext_1_4" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/flood_title2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#1a80c4"
                    android:clickable="true"
                    android:gravity="left|center"
                    android:onClick="toggle_contents2"
                    android:paddingLeft="10dp"
                    android:text="@string/flood_tiptitle2"
                    android:textColor="#FFF" />
                <!--content to hide/show -->
                <LinearLayout
                    android:id="@+id/flood_content2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#e2f3ff"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_2_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_2_2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_2_3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_2_4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_2_5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_2_6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_2_7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_2_8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_2_9" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/flood_tiptext_2_10" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>