<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="right"
        android:background="#c92c63"
        android:src="@drawable/ic_menu_lightning_square" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#c92c63"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/lightning_fragment"
        android:textAllCaps="true"
        android:textColor="#FFF"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="safetyfirst.phyoekhantzin.net.activities.LightningActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/lightning_menu_text" />

            <TextView
                android:id="@+id/earthquake_title_before"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#c92c63"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/lightning_tiptitle_outdoor"
                android:textColor="#FFF"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager_lightning_outdoor"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="#FFF" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lightning_tiptext_outdoor_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lightning_tiptext_outdoor_2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lightning_tiptext_outdoor_3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lightning_tiptext_outdoor_4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lightning_tiptext_outdoor_5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/earthquake_title_before1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#c92c63"
                    android:gravity="left|center"
                    android:paddingLeft="10dp"
                    android:text="@string/lightning_tiptitle_indoor"
                    android:textColor="#FFF"
                    android:textSize="16sp" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager_lightning_indoor"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="#FFF" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lightning_tiptext_indoor_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lightning_tiptext_indoor_2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lightning_tiptext_indoor_3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lightning_tiptext_indoor_4" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>